[package]
name = "mio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
urlencoding = "2.1.2"
dotenv = "0.15.0"
deadpool-postgres = "0.10.3"
postgres-openssl = "0.3.0"
openssl = "0.10.35"